k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-__CI_PROJECT_NAME__
  name: angular
spec:
  type: clusterIP
  # clusterIP: None
  ports:
    - name: angular
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: angular-__CI_PROJECT_NAME__
---
